--- a/prestation.html
+++ b/prestation.html
@@ -32,9 +32,9 @@
                 <span class="unfold-deco"></span>
             </div>
             <ul id="menu">
-                <li class="active" onclick="location.href='index.html';"><a href="#">Accueil</a></li>
+                <li onclick="location.href='index.html';"><a href="#">Accueil</a></li>
 
-                <li onclick="location.href='prestation.html';"><a href="#">Prestations</a></li>
+                <li class="active" onclick="location.href='prestation.html';"><a href="#">Prestations</a></li>
 
                 <li onclick="location.href='conseil.html';"><a href="#">Fiches conseil</a></li>
 
