--- a/index.html
+++ b/index.html
@@ -247,58 +247,65 @@
                     </div>
 
                     <div class="row1 pad-70">
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
+                       <!--<div class="col-xs-12 col-sm-4 col-md-3">
+                            <i class="fa fa-user-md fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <i class="fa fa-stethoscope fa-5x"></i>
+                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_dent()()"><a href="#">Dents</a></button>
+                            </div>
+                        </div>-->
+                        <!-- bloc 1/6 -->
+                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                            <div class="col-md-12">
+                                <i class="fa fa-stethoscope fa-4x"></i>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-default btn-m-70"><a href="#">Consultation</a></button>
+                                <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Consultation</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
+                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-camera fa-5x"></i>
+                                <i class="fa fa-camera fa-4x"></i>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-default btn-m-70"><a href="#">Imagerie</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
-                            <div class="col-md-12">
-                                <i class="fa fa-medkit fa-5x"></i>
-                            </div>
-                            <div class="col-md-12">
-                                <button class="btn btn-default btn-m-70"><a href="#">Analyses</a></button>
+                                <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Imagerie</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
+
+                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-heartbeat fa-5x"></i>
+                                <i class="fa fa-medkit fa-4x"></i>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-default btn-m-70"><a href="#">Chirurgie</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
-                            <div class="col-md-12">
-                                <i class="fa fa-hospital-o fa-5x"></i>
-                            </div>
-                            <div class="col-md-12">
-                                <button class="btn btn-default btn-m-70"><a href="#">Hospitalisation</a></button>
+                                <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Analyses</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
+                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-paw fa-5x"></i>
+                                <i class="fa fa-heartbeat fa-4x"></i>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-default btn-m-70"><a href="#">NAC</a></button>
+                                <button class="btn btn-padding-reset-index btn-default col-md-12 typo-btn"><a href="#">Chirurgie</a></button>
+                            </div>
+                        </div>
+                        <!-- bloc 1/6 -->
+                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                            <div class="col-md-12">
+                                <i class="fa fa-hospital-o fa-4x"></i>
+                            </div>
+                            <div class="col-md-12">
+                                <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Hospitalisation</a></button>
+                            </div>
+                        </div>
+                        <!-- bloc 1/6 -->
+                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                            <div class="col-md-12">
+                                <i class="fa fa-paw fa-4x"></i>
+                            </div>
+                            <div class="col-md-12">
+                                <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">NAC</a></button>
                             </div>
                         </div>
 
