--- a/conseil.html
+++ b/conseil.html
@@ -111,72 +111,13 @@
 
 
                 <section class="row text-center">
-
-<<<<<<< HEAD
-                    <div class="row1 pad-70">
-
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-2">
-                            <i class="fa fa-user-md fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_dent()"><a href="#">Dents</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
-                            <i class="fa fa-eye fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_yeux()"><a href="#">Yeux-Oreilles</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
-                            <i class="fa fa-paw fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_pelage()"><a href="#">Pelage</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2">
-                            <i class="fa fa-bug fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_parasite()"><a href="#">Parasites</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-2 fa-separator">
-                            <i class="fa fa-plus-square fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_vaccinChien()"><a href="#">Vaccin Chien</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 fa-separator">
-                            <i class="fa fa-medkit fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_vaccinChat()"><a href="#">Vaccin Chat</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 fa-separator">
-                            <i class="fa fa-info-circle fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_id()"><a href="#">Identification</a></button>
-                            </div>
-                        </div>
-                        <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 fa-separator">
-                            <i class="fa fa-book fa-4x text-center"></i>
-                            <div>
-                                <button class="btn btn-default" onclick="affich_education()"><a href="#">Éducation</a></button>
-=======
                     <div class="row1 pad-70 col-md-12">
 
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-3">
                             <i class="fa fa-user-md fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_dent()()"><a href="#">Dents</a></button>
+                                <button class="btn btn-default col-md-12" onclick="affich_dent()()"><a href="#">Dents</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
@@ -184,7 +125,7 @@
                             <i class="fa fa-eye fa-4x text-center"></i>
                             <div>
                                 <div class="col-md-12">
-                                    <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_yeux()"><a href="#">Yeux-Oreilles</a></button>
+                                    <button class="btn btn-default col-md-12" onclick="affich_yeux()"><a href="#">Yeux-Oreilles</a></button>
                                 </div>
                             </div>
                         </div>
@@ -193,7 +134,7 @@
                             <i class="fa fa-paw fa-4x text-center"></i>
                             <div>
                                <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_pelage()"><a href="#">Pelage</a></button>
+                                <button class="btn btn-default col-md-12" onclick="affich_pelage()"><a href="#">Pelage</a></button>
                                 </div>
                             </div>
                         </div>
@@ -201,55 +142,48 @@
                         <div class="col-xs-12 col-sm-4 col-md-3">
                             <i class="fa fa-bug fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_parasite()"><a href="#">Parasites</a></button>
+                                <button class="btn btn-default col-md-12" onclick="affich_parasite()"><a href="#">Parasites</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
                             <i class="fa fa-plus-square fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_vaccinChien()"><a href="#">Vaccin Chien</a></button>
+                                <button class="btn btn-default col-md-12" onclick="affich_vaccinChien()"><a href="#">Vaccin Chien</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
                             <i class="fa fa-medkit fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_vaccinChat()"><a href="#">Vaccin Chat</a></button>
+                                <button class="btn btn-default col-md-12" onclick="affich_vaccinChat()"><a href="#">Vaccin Chat</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
                             <i class="fa fa-info-circle fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_id()"><a href="#">Identification</a></button>
+                                <button class="btn btn-default col-md-12" onclick="affich_id()"><a href="#">Identification</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
                             <i class="fa fa-book fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_education()"><a href="#">Éducation</a></button>
->>>>>>> 16358e8b24482f0ff2636c1a2b5e983f479cf9a3
+                                <button class="btn btn-default col-md-12" onclick="affich_education()"><a href="#">Éducation</a></button>
                             </div>
                         </div>
-
-
                     </div>
 
                 </section>
-                <div class="separator-prestation"></div>
 
                 <!--<div class="separator-objet"></div>-->
 
                 <section id="navbar-prestation" class="row espace-footer">
                     <!-- ESPACE-FOOTER ? -->
 
-<<<<<<< HEAD
-                    <div id="dent" class="col-md-offset-1 col-md-9 article-prestation">
-=======
+
                     <div id="dent" class="col-md-offset-1 col-md-10 article-prestation">
->>>>>>> 16358e8b24482f0ff2636c1a2b5e983f479cf9a3
                         <div class="col-md-4">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
@@ -260,11 +194,8 @@
                         </div>
                     </div>
 
-<<<<<<< HEAD
-                    <div id="yeux-oreilles" class="col-md-offset-1 col-md-9 article-prestation">
-=======
+
                     <div id="yeux-oreilles" class="col-md-offset-1 col-md-10 article-prestation">
->>>>>>> 16358e8b24482f0ff2636c1a2b5e983f479cf9a3
                         <div class="col-md-4">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
@@ -275,11 +206,8 @@
                         </div>
                     </div>
 
-<<<<<<< HEAD
-                    <div id="pelage" class="col-md-offset-1 col-md-9 article-prestation">
-=======
+
                     <div id="pelage" class="col-md-offset-1 col-md-10 article-prestation">
->>>>>>> 16358e8b24482f0ff2636c1a2b5e983f479cf9a3
                         <div class="col-md-4">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
@@ -316,11 +244,8 @@
                         </div>
                     </div>
 
-<<<<<<< HEAD
-                    <div id="vaccin-chat" class="col-md-offset-1 col-md-9 article-prestation">
-=======
+
                     <div id="vaccin-chat" class="col-md-offset-1 col-md-10 article-prestation">
->>>>>>> 16358e8b24482f0ff2636c1a2b5e983f479cf9a3
                         <div class="col-md-4">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
@@ -331,11 +256,8 @@
                         </div>
                     </div>
 
-<<<<<<< HEAD
-                    <div id="id" class="col-md-offset-1 col-md-9 article-prestation">
-=======
+
                     <div id="id" class="col-md-offset-1 col-md-10 article-prestation">
->>>>>>> 16358e8b24482f0ff2636c1a2b5e983f479cf9a3
                         <div class="col-md-4">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
@@ -346,11 +268,8 @@
                         </div>
                     </div>
 
-<<<<<<< HEAD
-                    <div id="education" class="col-md-offset-1 col-md-9 article-prestation">
-=======
+
                     <div id="education" class="col-md-offset-1 col-md-10 article-prestation">
->>>>>>> 16358e8b24482f0ff2636c1a2b5e983f479cf9a3
                         <div class="col-md-4">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
