--- a/index.html
+++ b/index.html
@@ -254,55 +254,56 @@
                             </div>
                         </div>-->
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                        <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-3 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-stethoscope fa-4x"></i>
+                                <i class="fa fa-stethoscope fa-3x"></i>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Consultation</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                        <div class="col-xs-12 col-sm-4 col-md-3 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-camera fa-4x"></i>
+                                <i class="fa fa-camera fa-3x"></i>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Imagerie</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-
-                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                        
+                        <br class="col-md-12"></br>
+                        <div class="col-xs-12 col-sm-4 col-md-3 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-medkit fa-4x"></i>
+                                <i class="fa fa-medkit fa-3x"></i>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Analyses</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                        <div class="col-xs-12 col-sm-4 col-md-3 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-heartbeat fa-4x"></i>
+                                <i class="fa fa-heartbeat fa-3x"></i>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn btn-padding-reset-index btn-default col-md-12 typo-btn"><a href="#">Chirurgie</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                        <div class="col-xs-12 col-sm-4 col-md-3 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-hospital-o fa-4x"></i>
+                                <i class="fa fa-hospital-o fa-3x"></i>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">Hospitalisation</a></button>
+                                <button class="btn typo-btn btn-padding-reset btn-default col-md-12"><a href="#">Hospitalisation</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-2 btn-m-70">
+                        <div class="col-xs-12 col-sm-4 col-md-3 btn-m-70">
                             <div class="col-md-12">
-                                <i class="fa fa-paw fa-4x"></i>
+                                <i class="fa fa-paw fa-3x"></i>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn btn-padding-reset btn-default col-md-12"><a href="#">NAC</a></button>
