--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
                         <input type="submit" value="Envoyer" class="btn btn-default center-block" />
                     </form>
 
-                    <div class="col-md-12 text-center col-md-offset-1 style-map">
+                    <div class="col-md-12 text-center style-map">
                         <h3 class="h3-contact text-center">Où nous trouver</h3>
                         <p>32 rue du vélodrome à Pontchâteau (Loire-Atlantique)</p>
                         <p>Du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p>
