--- a/index.html
+++ b/index.html
@@ -247,12 +247,6 @@
                     </div>
 
                     <div class="row1 pad-70">
-                       <!--<div class="col-xs-12 col-sm-4 col-md-3">
-                            <i class="fa fa-user-md fa-4x text-center"></i>
-                            <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_dent()()"><a href="#">Dents</a></button>
-                            </div>
-                        </div>-->
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-3 btn-m-70">
                             <div class="col-md-12">
@@ -272,8 +266,8 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
+                        <div class="col-md-12"></div>
                         
-                        <br class="col-md-12"></br>
                         <div class="col-xs-12 col-sm-4 col-md-3 btn-m-70">
                             <div class="col-md-12">
                                 <i class="fa fa-medkit fa-3x"></i>
