--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
                         <p>32 rue du vélodrome à Pontchâteau (Loire-Atlantique)</p>
                         <p>Du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p>
                         <p>02 40 01 61 69</p>
-
+                        <!-- google map -->
                         <div class="map" style='overflow:hidden;height:382px;width:600px;'>
                             <div id='gmap_canvas' style='height:440px;width:630px;'></div>
                             <div><small><a href="http://embedgooglemaps.com">									google maps carte							</a></small></div>
@@ -137,6 +137,7 @@
                                 }
                             </style>
                         </div>
+                        <!-- js google map -->
                         <script type='text/javascript'>
                             function init_map() {
                                 var myOptions = {
