scroll hor presta ok + footer nettoyé

--- a/prestation.html
+++ b/prestation.html
@@ -262,9 +262,9 @@
             </div>
 
             <!-- footer -->
-            <section class="row">
+            
                 <footer class="col-md-12">
-                    <div class="text-center padding-footer">
+                    <div class="text-center">
                         <p class="">123 VETO -
                             <p>
                                 <p>©Copyright 2016-2016 Copyright Lise Solène Julien -</p>
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                 </footer>
-            </section>
+            
             <!-- /footer -->
 
         </div>
