--- a/index.html
+++ b/index.html
@@ -53,17 +53,11 @@
             <div class="header-corp-1">
                 <!-- logo -->
                 <div class="logo-img pull-right"></div>
-
                 <!-- infos du header -->
                 <div>
                     <h1>123 VETO - Clinique Vétérinaire</h1>
                     <h2>Dr Eric Wintz - Dr Aurélie Mayoussier</h2>
-                    <!--
-                    <div class="separator-header"></div>
-                    -->
-
                     <p>123 Véto vous accueille du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h</p>
-
                     <p>Les urgences sont assurées 24h/24 7 jours sur 7 sur appel téléphonique au 02 40 01 61 69</p>
                 </div>
             </div>
@@ -142,7 +136,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 pad-15-35">
+                    <div class="col-md-6 pad-35">
                         
                             <img class="img-responsive img-circle avatar" src="images/equip_Dr_Aur%C3%A9lie_Mayoussier.JPG" alt="Dr Aurélie Mayoussier" />
                         
