style header nettoyé

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <!-- en-tête du site -->
         <header class="row">
-            <div class="header-corp-1">
+            <div class="header-corp">
                 <!-- logo -->
                 <div class="logo-img pull-right"></div>
                 <!-- infos du header -->
