html- contact- rajout de classes bootstrap pour gérer les tablettes

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
         <div class="row">
 
-            <aside class="col-md-3 page-sans-header">
+            <aside class="col-md-3 col-sm-3 page-sans-header">
                 <h2>Prise de rendez-vous</h2>
 
                 <img src="images/calendrierex.png" alt="calendrier" class="img-responsive calendar" />
@@ -97,14 +97,14 @@
                 <div class="aside-separator"></div>
             </aside>
 
-            <section class="part-left col-md-9 bloc-principal reset-padding-contact">
+            <section class="part-left col-md-9 col-sm-9 bloc-principal reset-padding-contact">
                 <div class="text-center section-header page-sans-header">
                     <h2 id="startchange">NOUS CONTACTER</h2>
                 </div>
 
                 <div class="pad-50">
 
-                    <form class="col-md-10 col-md-offset-1">
+                    <form class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
                         <label for="nom">Votre nom:</label>
                         <br/>
                         <input id="nom" type="text" name="name" class="form-control" />
@@ -120,7 +120,7 @@
                         <input type="submit" value="Envoyer" class="btn btn-default center-block" />
                     </form>
 
-                    <div class="col-md-10 col-md-offset-1 text-center style-map">
+                    <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 text-center style-map">
                         <h3 class="h3-contact text-center">Où nous trouver</h3>
                         <p>32 rue du vélodrome à Pontchâteau (Loire-Atlantique)</p>
                         <p>Du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p>
