html- vente- rajout classes bootstrap pour gérer le mode tablette

--- a/vente.html
+++ b/vente.html
@@ -47,7 +47,7 @@
         </nav>
         
         <div class="row">
-        <aside class="col-md-3 page-sans-header">
+        <aside class="col-md-3 col-sm-3 page-sans-header">
             <h2>Prise de rendez-vous</h2>
 
                 <img src="images/calendrierex.png" alt="calendrier" class="img-responsive calendar" />
@@ -98,7 +98,7 @@
                 <div class="aside-separator"></div>
         </aside>
 
-        <section class="part-left col-md-9 bloc-principal">
+        <section class="part-left col-md-9 col-sm-9 bloc-principal">
             <!-- section nav icones prestation-->
             <section id="startchange" class="row text-center page-sans-header">
                 <div class="section-header">
@@ -137,8 +137,8 @@
             
             <section id="navbar-prestation" class="espace-footer center-block">
 
-                <div id="medicament" class="col-md-offset-1 col-md-10 article-prestation">
-                    <div class="col-md-4">
+                <div id="medicament" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                    <div class="col-md-4 col-sm-5">
                         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
                     </div>
                     <div class="col-md-8">
@@ -151,8 +151,8 @@
                     </div>
                 </div>
 
-                <div id="alimentation" class="col-md-offset-1 col-md-10 article-prestation">
-                    <div class="col-md-4">
+                <div id="alimentation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                    <div class="col-md-4 col-sm-5">
                         <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                     </div>
                     <div class="col-md-8">
@@ -165,11 +165,11 @@
                     </div>
                 </div>
 
-                <div id="index" class="col-md-offset-1 col-md-10 article-prestation">
-                    <div class="col-md-4">
+                <div id="index" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                    <div class="col-md-4 col-sm-5">
                         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-sm-7">
                         <h3><i class="fa fa-list"></i> INDEX</h3>
 
                         <ul class="list-group">
