--- a/conseil.html
+++ b/conseil.html
@@ -48,7 +48,7 @@
 
         <div class="row">
 
-            <aside class="col-md-3 page-sans-header">
+            <aside class="col-md-3 col-sm-3 page-sans-header">
 
                 <h2>Prise de rendez-vous</h2>
 
@@ -101,7 +101,7 @@
 
             </aside>
 
-            <div class="col-md-9 part-left bloc-principal">
+            <div class="col-md-9 col-sm-9 part-left bloc-principal">
                 <!-- en-tête du site -->
                 <section id="startchange" class="row text-center page-sans-header">
                     <div class="section-header">
@@ -112,7 +112,7 @@
 
                 <section class="row text-center">
 
-                    <div class="row1 pad-50 col-md-12">
+                    <div class="row1 pad-50 col-md-12 col-sm-12">
 
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-3">
@@ -186,9 +186,9 @@
                     <!-- ESPACE-FOOTER ? -->
 
 
-                    <div id="dent" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="dent" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -199,9 +199,9 @@
                     </div>
 
 
-                    <div id="yeux-oreilles" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="yeux-oreilles" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -212,9 +212,9 @@
                     </div>
 
 
-                    <div id="pelage" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="pelage" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -225,9 +225,9 @@
                     </div>
 
 
-                    <div id="parasite" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="parasite" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -238,9 +238,9 @@
                     </div>
 
 
-                    <div id="vaccin-chien" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="vaccin-chien" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -251,9 +251,9 @@
                     </div>
 
 
-                    <div id="vaccin-chat" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="vaccin-chat" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -264,9 +264,9 @@
                     </div>
 
 
-                    <div id="id" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="id" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -277,9 +277,9 @@
                     </div>
 
 
-                    <div id="education" class="col-md-offset-1 col-md-10 article-prestation">
+                    <div id="education" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8">
