html- presta- rajout classes bootstrap pour gérer le mode tablette

--- a/prestation.html
+++ b/prestation.html
@@ -49,7 +49,7 @@
 
         <div class="row">
             <!-- aside -->
-            <aside class="col-md-3 page-sans-header">
+            <aside class="col-md-3 col-sm-3 page-sans-header">
 
                 <h2>Prise de rendez-vous</h2>
 
@@ -103,7 +103,7 @@
             </aside>
 
             <!-- corps -->
-            <div class="part-left col-md-9 bloc-principal">
+            <div class="part-left col-md-9 col-sm-9 bloc-principal">
                 <!-- section nav icones prestation-->
                 <section id="startchange" class="row text-center page-sans-header">
                     <div class="section-header">
@@ -114,7 +114,7 @@
                 <!--<div class="separator-objet"></div>-->
                 <section class="row text-center">
 
-                    <div class="pad-50 col-md-11">
+                    <div class="pad-50 col-md-11 col-sm-11">
 
                         <!-- bloc 1/6 -->
                         <div class="col-xs-12 col-sm-4 col-md-offset-2 col-md-3">
@@ -163,8 +163,8 @@
 
                 <section id="navbar-prestation" class="row espace-footer center-block">
 
-                    <div id="consultation" class="col-md-offset-1 col-md-10 article-prestation">
-                        <div class="col-md-4">
+                    <div id="consultation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/Consultation_3.JPG" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -184,8 +184,8 @@
                         </div>
                     </div>
 
-                    <div id="imagerie" class="col-md-offset-1 col-md-10 article-prestation">
-                        <div class="col-md-4">
+                    <div id="imagerie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/radiologie_2.JPG" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -197,8 +197,8 @@
                         </div>
                     </div>
 
-                    <div id="analyse" class="col-md-offset-1 col-md-10 article-prestation">
-                        <div class="col-md-4">
+                    <div id="analyse" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/Labo_analyse_microscopique.JPG" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -213,8 +213,8 @@
                         </div>
                     </div>
 
-                    <div id="chirurgie" class="col-md-offset-1 col-md-10 article-prestation">
-                        <div class="col-md-4">
+                    <div id="chirurgie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/chirurgie_1.JPG" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -231,8 +231,8 @@
                         </div>
                     </div>
 
-                    <div id="hospitalisation" class="col-md-offset-1 col-md-10 article-prestation">
-                        <div class="col-md-4">
+                    <div id="hospitalisation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/Chatterie.JPG" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -246,8 +246,8 @@
                         </div>
                     </div>
 
-                    <div id="nac" class="col-md-offset-1 col-md-10 article-prestation">
-                        <div class="col-md-4">
+                    <div id="nac" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
+                        <div class="col-md-4 col-sm-5">
                             <img class="img-responsive img-circle" src="images/NAC.JPG" alt="chat">
                         </div>
                         <div class="col-md-8">
@@ -263,7 +263,7 @@
 
             <!-- footer -->
             
-                <footer class="col-md-12">
+                <footer class="col-md-12 col-sm-12">
                     <div class="text-center">
                         <p class="">123 VETO -
                             <p>
