html- all- rajout classe bootstrap, aside cachée mode xs

--- a/conseil.html
+++ b/conseil.html
@@ -48,7 +48,7 @@
 
         <div class="row">
 
-            <aside class="col-md-3 col-sm-3 page-sans-header">
+            <aside class="col-md-3 col-sm-3 hidden-xs page-sans-header">
 
                 <h2>Prise de rendez-vous</h2>
 
