--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
         <div class="row">
 
-            <aside class="col-md-3 col-sm-3 page-sans-header">
+            <aside class="col-md-3 col-sm-3 hidden-xs page-sans-header">
                 <h2>Prise de rendez-vous</h2>
 
                 <img src="images/calendrierex.png" alt="calendrier" class="img-responsive calendar" />
