button presta idex 3 par 3 + responsive mode tablette

--- a/conseil.html
+++ b/conseil.html
@@ -115,64 +115,64 @@
                     <div class="row1 pad-50 col-md-12 col-sm-12">
 
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3">
+                        <div class="col-xs-6 col-sm-3 btn-padding-reset col-md-3 fa-separator">
                             <i class="fa fa-user-md fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_dent()()"><a href="#">Dents</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_dent()()"><a href="#">Dents</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3">
+                        <div class="col-xs-6 col-sm-3 btn-padding-reset col-md-3 fa-separator">
                             <i class="fa fa-eye fa-4x text-center"></i>
                             <div>
                                 <div class="col-md-12">
-                                    <button class="btn btn-default col-md-12" onclick="affich_yeux()"><a href="#">Yeux-Oreilles</a></button>
+                                    <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_yeux()"><a href="#">Yeux-Oreilles</a></button>
                                 </div>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3">
+                        <div class="col-xs-6 col-sm-3 btn-padding-reset col-md-3 fa-separator">
                             <i class="fa fa-paw fa-4x text-center"></i>
                             <div>
                                 <div class="col-md-12">
-                                    <button class="btn btn-default col-md-12" onclick="affich_pelage()"><a href="#">Pelage</a></button>
+                                    <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_pelage()"><a href="#">Pelage</a></button>
                                 </div>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3">
+                        <div class="col-xs-6 col-sm-3 btn-padding-reset col-md-3 fa-separator">
                             <i class="fa fa-bug fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_parasite()"><a href="#">Parasites</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_parasite()"><a href="#">Parasites</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
+                        <div class="col-xs-6 col-sm-3 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-plus-square fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_vaccinChien()"><a href="#">Vaccin Chien</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_vaccinChien()"><a href="#">Vaccin Chien</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
+                        <div class="col-xs-6 col-sm-3 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-medkit fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_vaccinChat()"><a href="#">Vaccin Chat</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_vaccinChat()"><a href="#">Vaccin Chat</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
+                        <div class="col-xs-6 col-sm-3 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-info-circle fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_id()"><a href="#">Identification</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_id()"><a href="#">Identification</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
+                        <div class="col-xs-6 col-sm-3 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-book fa-4x text-center"></i>
                             <div class="col-md-12">
 
-                                <button class="btn btn-default col-md-12" onclick="affich_education()"><a href="#">Éducation</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_education()"><a href="#">Éducation</a></button>
 
                             </div>
                         </div>
