--- a/prestation.html
+++ b/prestation.html
@@ -117,45 +117,45 @@
                     <div class="pad-50 col-md-11 col-sm-11">
 
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-offset-2 col-md-3">
+                        <div class="col-xs-6 col-sm-4 col-md-offset-2 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-stethoscope fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_consultation()"><a href="#">Consultation</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_consultation()"><a href="#">Consultation</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3">
+                        <div class="col-xs-6 col-sm-4 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-camera fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_imagerie()"><a href="#">Imagerie</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_imagerie()"><a href="#">Imagerie</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3">
+                        <div class="col-xs-6 col-sm-4 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-medkit fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_analyse()"><a href="#">Analyses</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_analyse()"><a href="#">Analyses</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-2 fa-separator ">
+                        <div class="col-xs-6 col-sm-4 col-md-3 btn-padding-reset col-md-offset-2 fa-separator ">
                             <i class="fa fa-heartbeat fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_chirurgie()"><a href="#">Chirurgie</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_chirurgie()"><a href="#">Chirurgie</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
+                        <div class="col-xs-6 col-sm-4 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-hospital-o fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-padding-reset btn-padding-reset btn-default col-md-12" onclick="affich_hospitalisation()"><a href="#">Hospitalisation</a></button>
+                                <button class="btn btn-padding-reset btn-default col-md-12" onclick="affich_hospitalisation()"><a href="#">Hospitalisation</a></button>
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-12 col-sm-4 col-md-3 fa-separator">
+                        <div class="col-xs-6 col-sm-4 col-md-3 btn-padding-reset fa-separator">
                             <i class="fa fa-paw fa-4x text-center"></i>
                             <div class="col-md-12">
-                                <button class="btn btn-default col-md-12" onclick="affich_nac()"><a href="#">NAC</a></button>
+                                <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_nac()"><a href="#">NAC</a></button>
                             </div>
                         </div>
                     </div>
