rdv- responsive tablette

--- a/priserdv.html
+++ b/priserdv.html
@@ -50,7 +50,7 @@
 
         <div class="row pad-50 col-md-offset-2">
 
-            <form class="col-md-5">
+            <form class="col-md-5 col-sm-5 col-sm-offset-1">
                 <label for="nom">Prénom et nom :</label>
                 <br/>
                 <input id="nom" type="text" name="name" class="form-control" />
@@ -81,7 +81,7 @@
             </form>
 
 
-            <form class="col-md-5">
+            <form class="col-md-5 col-sm-5">
                 <label for="nom">E-mail:</label>
                 <br/>
                 <input id="nom" type="text" name="name" class="form-control" />
@@ -100,8 +100,8 @@
                     </select>
                 </div>
             </form>
-            <br class="col-md-12"></br>
-            <form class="col-md-10">
+            <br class="col-md-12 col-sm-12"></br>
+            <form class="col-md-10 col-sm-10 col-sm-offset-1">
                 <label for="message">Votre message:</label>
                 <br/>
                 <textarea id="message" name="message" rows="15" cols="40" class="form-control"></textarea>
@@ -112,7 +112,7 @@
 
 
         <section class="row">
-            <footer class="col-md-12">
+            <footer class="col-md-12 col-sm-12">
                 <div class="text-center padding-footer">
                     <p class="">123 VETO -
                         <p>
