footer responsive tablette & phone

--- a/conseil.html
+++ b/conseil.html
@@ -294,7 +294,7 @@
 
         <!-- footer -->
         <section class="row">
-            <footer class="col-md-12">
+            <footer class="col-md-12 col-sm-12 col-xs-12">
                 <div class="text-center padding-footer">
                     <p class="">123 VETO -
                         <p>
