--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
         
         <section class="row">
-            <footer class="col-md-12">
+            <footer class="col-md-12 col-sm-12 col-xs-12">
                 <div class="text-center padding-footer"><p class="">123 VETO &bull; <p><p>©Copyright 2016-2016 &bull; Copyright Lise Solène Julien &bull; </p>
                         <!-- Trigger the modal-->
                         <a class="" data-toggle="modal" data-target="#myModal">MENTIONS LÉGALES</a></div>
