--- a/prestation.html
+++ b/prestation.html
@@ -263,7 +263,7 @@
 
             <!-- footer -->
             
-                <footer class="col-md-12 col-sm-12">
+                <footer class="col-md-12 col-sm-12 col-xs-122">
                     <div class="text-center">
                         <p class="">123 VETO -
                             <p>
