--- a/prestation.html
+++ b/prestation.html
@@ -164,10 +164,10 @@
                 <section id="navbar-prestation" class="row espace-footer center-block">
 
                     <div id="consultation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                             <img class="img-responsive img-circle" src="images/Consultation_3.JPG" alt="chat">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-stethoscope"></i> CONSULTATION</h3>
                             <small>À la différence de l'homme, nos compagnons ne parlent pas pendant la consultation, c'est à vous de bien noter les moindres signes ou changements et de nous en faire part.</small>
                             <h4>La consultation vaccinale :</h4>
