vente img responsive xs done

--- a/vente.html
+++ b/vente.html
@@ -138,10 +138,10 @@
             <section id="navbar-prestation" class="espace-footer center-block">
 
                 <div id="medicament" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                    <div class="col-md-4 col-sm-5">
+                    <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-xs-12">
                         <h3><i class="fa fa-medkit"></i> SERVICE MÉDICAMENT</h3>
                         <h4>Les médicaments c'est top :</h4>
                         <p>Différents produits nettoyants pour les yeux, les oreilles, shampoing, produits d'hygiène dentaire ont été sélectionnés. Vous trouverez également des antipuces, antitiques, et vermifuge adaptés à votre animal</p>
@@ -152,10 +152,10 @@
                 </div>
 
                 <div id="alimentation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                    <div class="col-md-4 col-sm-5">
+                    <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                         <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-xs-12">
                         <h3><i class="fa fa-heart"></i> ALIMENTATION</h3>
                         <small>L'alimentation, la base pour la santé de votre animal</small>
                         <h4>L'alimentation c'est top !</h4>
@@ -166,10 +166,10 @@
                 </div>
 
                 <div id="index" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                    <div class="col-md-4 col-sm-5">
+                    <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
                     </div>
-                    <div class="col-md-8 col-sm-7">
+                    <div class="col-md-8 col-sm-7 col-xs-12">
                         <h3><i class="fa fa-list"></i> INDEX</h3>
 
                         <ul class="list-group">
