remove col-xs-offset-2

--- a/conseil.html
+++ b/conseil.html
@@ -188,7 +188,7 @@
 
                     <div id="dent" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -201,7 +201,7 @@
 
                     <div id="yeux-oreilles" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
+                        <div class="col-md-4 col-sm-5 col-xs-6">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -214,7 +214,7 @@
 
                     <div id="pelage" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -227,7 +227,7 @@
 
                     <div id="parasite" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -240,7 +240,7 @@
 
                     <div id="vaccin-chien" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -253,7 +253,7 @@
 
                     <div id="vaccin-chat" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -266,7 +266,7 @@
 
                     <div id="id" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -279,7 +279,7 @@
 
                     <div id="education" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
 
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
