--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
         
         <section class="row">
             <footer class="col-md-12">
-                <div class="text-center padding-footer"><p class="">123 VETO &bull; <p><p>©Copyright 2016-2016 &bull; Copyright Lise Solène Julien &bull; </p>
+                <div class="text-center padding-footer col-md-12"><p class=""><p>123 VETO - ©Copyright 2016 : Lise Solène Julien - </p>
                         <!-- Trigger the modal-->
-                        <a class="" data-toggle="modal" data-target="#myModal">MENTIONS LÉGALES</a></div>
+                        <a class="" data-toggle="modal" data-target="#myModal">mentions légales</a></div>
                         
                         <!-- Modal -->
                         <div class="modal fade" id="myModal" role="dialog">
