--- a/prestation.html
+++ b/prestation.html
@@ -114,7 +114,7 @@
                 <!--<div class="separator-objet"></div>-->
                 <section class="row text-center">
 
-                    <div class="pad-50 col-md-11 col-sm-11">
+                    <div class="pad-50 col-md-12 col-sm-12">
 
                         <!-- bloc 1/6 -->
                         <div class="col-xs-6 col-sm-4 col-md-offset-2 col-md-3 btn-padding-reset fa-separator">
@@ -164,7 +164,7 @@
                 <section id="navbar-prestation" class="row espace-footer center-block">
 
                     <div id="consultation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/Consultation_3.JPG" alt="chat">
                         </div>
                         <div class="col-md-8 col-xs-12">
