--- a/vente.html
+++ b/vente.html
@@ -107,28 +107,28 @@
             </section>
 
             <!--<div class="separator-objet"></div>-->
-            <section>
-                <div class="text-center pad-50 col-md-12">
+            <section class="row text-center">
+                <div class="text-center pad-50 col-md-12 col-sm-12">
 
-                    <!-- bloc 1/6 -->
-                    <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
+                    <!-- bloc 1/6 -->                    
+                    <div class="col-xs-12 col-sm-4 col-md-4 btn-padding-reset fa-separator">
                         <i class="fa fa-medkit fa-4x"></i>
                         <div class="col-md-12">
-                            <button class="btn btn-default col-md-12" onclick="affich_medicament()"><a href="#">Médicament</a></button>
+                            <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_medicament()"><a href="#">Médicament</a></button>
                         </div>
                     </div>
                     <!-- bloc 1/6 -->
-                    <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="col-xs-12 col-sm-4 col-md-4 fa-separator">
                         <i class="fa fa-heart fa-4x text-center"></i>
                         <div class=" ">
-                            <button class="btn btn-default col-md-12" onclick="affich_alimentation()"><a href="#">Alimentation</a></button>
+                            <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_alimentation()"><a href="#">Alimentation</a></button>
                         </div>
                     </div>
                     <!-- bloc 1/6 -->
-                    <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="col-xs-12 col-sm-4 col-md-4 fa-separator">
                         <i class="fa fa-list fa-4x"></i>
                         <div class="col-md-12">
-                            <button class="btn btn-default col-md-12" onclick="affich_index()"><a href="#">Index</a></button>
+                            <button class="btn btn-default col-md-12 btn-padding-reset" onclick="affich_index()"><a href="#">Index</a></button>
                         </div>
                     </div>
             </section>
