--- a/vente.html
+++ b/vente.html
@@ -138,7 +138,7 @@
             <section id="navbar-prestation" class="espace-footer center-block">
 
                 <div id="medicament" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                    <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                    <div class="col-md-4 col-sm-5 col-xs-8">
                         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
                     </div>
                     <div class="col-md-8 col-xs-12">
@@ -152,7 +152,7 @@
                 </div>
 
                 <div id="alimentation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                    <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                    <div class="col-md-4 col-sm-5 col-xs-8">
                         <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                     </div>
                     <div class="col-md-8 col-xs-12">
@@ -166,34 +166,34 @@
                 </div>
 
                 <div id="index" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                    <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                    <div class="col-md-4 col-sm-5 col-xs-8">
                         <img class="img-responsive img-circle" src="images/Espace_Vente.JPG" alt="chat">
                     </div>
                     <div class="col-md-8 col-sm-7 col-xs-12">
                         <h3><i class="fa fa-list"></i> INDEX</h3>
 
                         <ul class="list-group">
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
-                            <li class="list-group-item">First item</li>
-                            <li class="list-group-item">Second item</li>
-                            <li class="list-group-item">Third item</li>
+                            <li class="list-group-item">Croquette</li>
+                            <li class="list-group-item">Brosses</li>
+                            <li class="list-group-item">Litières</li>
+                            <li class="list-group-item">Vermifuge</li>
+                            <li class="list-group-item">Anti-puce</li>
+                            <li class="list-group-item">Pinceà tiques</li>
+                            <li class="list-group-item">Jouets</li>
+                            <li class="list-group-item">Croquette</li>
+                            <li class="list-group-item">Brosses</li>
+                            <li class="list-group-item">Litières</li>
+                            <li class="list-group-item">Vermifuge</li>
+                            <li class="list-group-item">Anti-puce</li>
+                            <li class="list-group-item">Pinceà tiques</li>
+                            <li class="list-group-item">Jouets</li>
+                            <li class="list-group-item">Croquette</li>
+                            <li class="list-group-item">Brosses</li>
+                            <li class="list-group-item">Litières</li>
+                            <li class="list-group-item">Vermifuge</li>
+                            <li class="list-group-item">Anti-puce</li>
+                            <li class="list-group-item">Pinceà tiques</li>
+                            <li class="list-group-item">Jouets</li>
                         </ul>
                     </div>
             </section>
