--- a/prestation.html
+++ b/prestation.html
@@ -185,7 +185,7 @@
                     </div>
 
                     <div id="imagerie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/radiologie_2.JPG" alt="radiologie">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -198,7 +198,7 @@
                     </div>
 
                     <div id="analyse" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/Labo_analyse_microscopique.JPG" alt="analyse microscopique">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -214,7 +214,7 @@
                     </div>
 
                     <div id="chirurgie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/chirurgie_1.JPG" alt="salle chirurgie">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -232,7 +232,7 @@
                     </div>
 
                     <div id="hospitalisation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/Chatterie.JPG" alt="chatterie">
                         </div>
                         <div class="col-md-8 col-xs-12">
@@ -247,7 +247,7 @@
                     </div>
 
                     <div id="nac" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                        <div class="col-md-4 col-sm-5 col-xs-8">
                             <img class="img-responsive img-circle" src="images/NAC.JPG" alt="hamster">
                         </div>
                         <div class="col-md-8 col-xs-12">
